Added some more files

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 	</head>
 	<body>
 		<h1>Hello! Welcome to this mini web app thingy!</h1>
-		<h2>You can view some filesystem information <a href="../cgi-bin/project2filesystem.cgi">here</a>.</h2>
-
-		<form action= "../cgi-bin/project2.cgi" method = "get">
+		<h2>You can view some filesystem information <a href="./cgi-bin/project2filesystem.cgi">here</a>.</h2>
+		<hr>
+		<h2>Type your name up here, and I'll look you up on Twitter!</h2>
+		<form action= "./cgi-bin/project2.cgi" method = "get">
 			First Name: <input type = "text" name = "first_name"/> <br/>
 
 			Last Name: <input type = "text" name = "last_name"/>
